--- a/public/order_template_lwt.ejs
+++ b/public/order_template_lwt.ejs
@@ -14,6 +14,14 @@
     </table>
     <table style="width: 100%; border-collapse: collapse; font-size: medium;">
     <tr>
+        <td style="padding: 10px;"><strong>Geschäfts ID:</strong></td>
+        <td style="padding: 10px;"><%= storeID %></td>
+    </tr>
+    <tr>
+        <td style="padding: 10px;"><strong>Geschäftsname:</strong></td>
+        <td style="padding: 10px;"><%= storeName %></td>
+    </tr>
+    <tr>
       <td style="padding: 10px;"><strong>Bestellnummer:</strong></td>
       <td style="padding: 10px;"><%= orderID %></td>
     </tr>
